feat: Add democratic-csi Helm chart and configuration for Synology iSCSI storage
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/values.yaml
+++ b/cluster/values.yaml
@@ -12,6 +12,12 @@ config:
     admin_email: YOUR_EMAIL
     timezone: YOUR_TIMEZONE
     storage:
+      democratic-csi:
+        httpConnection:
+          host: nas.ullberg.family
+          port: 5000
+        iscsi:
+          targetPortal: nas.ullberg.family
       config:
         storageClassName: synology-iscsi
       media:
