--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -10,6 +10,8 @@ spec:
   generators:
     - list:
         elements:
+        - name: democratic-csi
+          group: storage
         - name: external-secrets-operator
           group: security
         - name: goldilocks
