fix: Comment out sensitive configuration options in externalsecret.yaml and values.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/storage/democratic-csi/templates/externalsecret.yaml
+++ b/charts/storage/democratic-csi/templates/externalsecret.yaml
@@ -18,9 +18,9 @@ spec:
           driver: synology-iscsi
           httpConnection:
             allowInsecure: true
-            host: {{ .Values.cluster.storage.democratic-csi.httpConnection.host }}
-            password: "{{ `{{ .NAS_PASSWORD }}` }}"
-            port: {{ .Values.cluster.storage.democratic-csi.httpConnection.port }}
+            #host: {{ .Values.cluster.storage.democratic-csi.httpConnection.host }}
+            #password: "{{ `{{ .NAS_PASSWORD }}` }}"
+            #port: {{ .Values.cluster.storage.democratic-csi.httpConnection.port }}
             protocol: http
             serialize: true
             session: {{ .Values.cluster.name }}-democratic-csi
@@ -47,7 +47,7 @@ spec:
               type: BLUN
             namePrefix: {{ .Values.cluster.name }}-
             nameSuffix: ""
-            targetPortal: {{ .Values.cluster.storage.democratic-csi.iscsi.targetPortal }}
+            #targetPortal: {{ .Values.cluster.storage.democratic-csi.iscsi.targetPortal }}
             targetPortals: []
             targetTemplate:
               auth_type: 0
