--- a/charts/storage/democratic-csi/values.yaml
+++ b/charts/storage/democratic-csi/values.yaml
@@ -13,6 +13,7 @@ cluster:
 
 democratic-csi:
   driver:
+    #existingConfigSecret: {{ .Release.Name }}-config
     config:
       driver: synology-iscsi
 
