fix: Enclose namePrefix value in quotes for proper YAML formatting
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/storage/democratic-csi/templates/externalsecret.yaml
+++ b/charts/storage/democratic-csi/templates/externalsecret.yaml
@@ -45,7 +45,7 @@ spec:
               - dev_attrib: can_snapshot
                 enable: 1
               type: BLUN
-            namePrefix: {{ .Values.cluster.name }}-
+            namePrefix: "{{ .Values.cluster.name }}-"
             nameSuffix: ""
             #targetPortal: {{ .Values.cluster.storage.democratic-csi.iscsi.targetPortal }}
             targetPortals: []
