fix: Comment out host configuration option in externalsecret.yaml for clarity
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/storage/democratic-csi/templates/externalsecret.yaml
+++ b/charts/storage/democratic-csi/templates/externalsecret.yaml
@@ -18,6 +18,7 @@ spec:
           driver: synology-iscsi
           httpConnection:
             allowInsecure: true
+            #host: {{ .Values.cluster.storage.democratic-csi.httpConnection.host }}
   data:
     - remoteRef:
         key: NAS_PASSWORD
