fix: Update externalsecret.yaml to use index for host and improve iscsi configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/storage/democratic-csi/templates/externalsecret.yaml
+++ b/charts/storage/democratic-csi/templates/externalsecret.yaml
@@ -18,7 +18,40 @@ spec:
           driver: synology-iscsi
           httpConnection:
             allowInsecure: true
-            #host: {{ .Values.cluster.storage.democratic-csi.httpConnection.host }}
+            host: {{ index .Values "cluster" "storage" "democratic-csi" "httpConnection" "host" }}
+            password: "{{ `{{ .NAS_PASSWORD }}` }}"
+            port: {{ index .Values "cluster" "storage" "democratic-csi" "httpConnection" "port" }}
+            protocol: http
+            serialize: true
+            session: {{ .Values.cluster.name }}-democratic-csi
+            username: "{{ `{{ .NAS_USERNAME }}` }}"
+          iscsi:
+            baseiqn: iqn.2000-01.com.synology:csi.
+            interface: ""
+            lunSnapshotTemplate:
+              is_app_consistent: true
+              is_locked: true
+            lunTemplate:
+              description: "{{ `{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}-{{ parameters.[csi.storage.k8s.io/pvc/name] }}` }}"
+              dev_attribs:
+              - dev_attrib: emulate_tpws
+                enable: 1
+              - dev_attrib: emulate_caw
+                enable: 1
+              - dev_attrib: emulate_3pc
+                enable: 1
+              - dev_attrib: emulate_tpu
+                enable: 1
+              - dev_attrib: can_snapshot
+                enable: 1
+              type: BLUN
+            namePrefix: "{{ .Values.cluster.name }}-"
+            nameSuffix: ""
+            targetPortal: {{ index .Values "cluster" "storage" "democratic-csi" "iscsi" "targetPortal" }}
+            targetPortals: []
+            targetTemplate:
+              auth_type: 0
+              max_sessions: 0
   data:
     - remoteRef:
         key: NAS_PASSWORD
