fix: Correct YAML string interpolation for lunTemplate description in externalsecret.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/storage/democratic-csi/templates/externalsecret.yaml
+++ b/charts/storage/democratic-csi/templates/externalsecret.yaml
@@ -32,7 +32,7 @@ spec:
               is_app_consistent: true
               is_locked: true
             lunTemplate:
-              description: "{{ `{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}-{{ parameters.[csi.storage.k8s.io/pvc/name] }}` }}"
+              description: "{{ `{{ '{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}-{{ parameters.[csi.storage.k8s.io/pvc/name] }}' }}` }}"
               dev_attribs:
               - dev_attrib: emulate_tpws
                 enable: 1
