fix: Update existingConfigSecret in values.yaml and externalsecret.yaml for consistent naming
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/storage/democratic-csi/templates/externalsecret.yaml
+++ b/charts/storage/democratic-csi/templates/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: {{ .Release.Name }}-config
+  name: democratic-csi-config
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: external-secrets
   target:
-    name: {{ .Release.Name }}-config
+    name: democratic-csi-config
     template:
       engineVersion: v2
       mergePolicy: Replace
