--- a/charts/storage/democratic-csi/values.yaml
+++ b/charts/storage/democratic-csi/values.yaml
@@ -13,7 +13,7 @@ cluster:
 
 democratic-csi:
   driver:
-    #existingConfigSecret: {{ .Release.Name }}-config
+    existingConfigSecret: democratic-csi-config
     config:
       driver: synology-iscsi
       iscsi:
