feat: Add initial Chart.yaml, externalsecret.yaml, and values.yaml for democratic-csi configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -10,7 +10,9 @@ spec:
   generators:
     - list:
         elements:
-        - name: democratic-csi
+        - name: custom-error-pages
+          group: infrastructure
+        - name: cluster-democratic-csi
           group: storage
         - name: external-secrets-operator
           group: security
