--- a/cluster/templates/storage.yaml
+++ b/cluster/templates/storage.yaml
@@ -34,7 +34,7 @@ spec:
           - CreateNamespace=true
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
-        path: charts/{{ "{{" }} default "base" .group {{ "}}" }}/{{ "{{" }} .name {{ "}}" }}
+        path: charts/storage/democratic-csi
         targetRevision: {{ .Values.spec.source.targetRevision }}
         helm:
           valuesObject:
