--- a/charts/infrastructure/custom-error-pages/values.yaml
+++ b/charts/infrastructure/custom-error-pages/values.yaml
@@ -12,4 +12,10 @@ cluster:
       storageClassName: synology-iscsi
 
 custom-error-pages:
+  # Available templates: app-down, cats, connection, ghost, hacker-terminal, l7, lost-in-space, noise, orient, shuffle, win98
+  # Available templates: app-down, cats, connection, ghost, hacker-terminal, l7, lost-in-space, noise, orient, shuffle, win98
+  # Available templates: app-down, cats, connection, ghost, hacker-terminal, l7, lost-in-space, noise, orient, shuffle, win98
+  # Available templates: app-down, cats, connection, ghost, hacker-terminal, l7, lost-in-space, noise, orient, shuffle, win98
+  # Available templates: app-down, cats, connection, ghost, hacker-terminal, l7, lost-in-space, noise, orient, shuffle, win98
+  # Available templates: app-down, cats, connection, ghost, hacker-terminal, l7, lost-in-space, noise, orient, shuffle, win98
   template: connection
