--- a/charts/infrastructure/custom-error-pages/values.yaml
+++ b/charts/infrastructure/custom-error-pages/values.yaml
@@ -13,4 +13,4 @@ cluster:
 
 custom-error-pages:
   # Available templates: app-down, cats, connection, ghost, hacker-terminal, l7, lost-in-space, noise, orient, shuffle, win98
-  template: ghost
+  template: hacker-terminal
