--- a/charts/infrastructure/custom-error-pages/values.yaml
+++ b/charts/infrastructure/custom-error-pages/values.yaml
@@ -2,15 +2,13 @@ cluster:
   top_level_domain: example.com
   name: cluster
   storage:
-    democratic-csi:
-      httpConnection:
-        host: nas.ullberg.family
-        port: 5000
-      iscsi:
-        targetPortal: nas.ullberg.family
-    config:
-      storageClassName: synology-iscsi
+    #config:
+    #  storageClassName: synology-iscsi
+    media:
+      nfs:
+        server: nas
+        path: /volume1/media
 
 custom-error-pages:
   # Available templates: app-down, cats, connection, ghost, hacker-terminal, l7, lost-in-space, noise, orient, shuffle, win98
-  template: hacker-terminal
+  template: connection
