feat: Add OpenShift Node Feature Discovery Helm chart and associated templates
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -18,6 +18,8 @@ spec:
           group: infrastructure
         - name: gatus
           group: infrastructure
+        - name: openshift-nfd
+          group: infrastructure
   template:
     metadata:
       name: '{{ "{{" }} .name {{ "}}" }}'
