--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -18,6 +18,9 @@ spec:
           group: infrastructure
         - name: gatus
           group: infrastructure
+        - name: intel-gpu-operator
+          group: infrastructure
+          createNamespace: false
         - name: openshift-nfd
           group: infrastructure
   template:
@@ -39,7 +42,7 @@ spec:
           prune: true
           selfHeal: true
         syncOptions:
-          - CreateNamespace=true
+          - CreateNamespace={{ "{{" }} if .createNamespace {{ "}}" }}{{ "{{" }} .createNamespace {{ "}}" }}{{ "{{" }} else {{ "}}" }}true{{ "{{" }} end {{ "}}" }}
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         path: charts/{{ "{{" }} default "base" .group {{ "}}" }}/{{ "{{" }} .name {{ "}}" }}
