fix: Update CreateNamespace handling in application templates to support dynamic configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/ai.yaml
+++ b/cluster/templates/ai.yaml
@@ -35,7 +35,7 @@ spec:
           prune: true
           selfHeal: true
         syncOptions:
-          - CreateNamespace=true
+          - CreateNamespace={{ "{{" }} if hasKey . "createNamespace" {{ "}}" }}{{ "{{" }} .createNamespace {{ "}}" }}{{ "{{" }} else {{ "}}" }}true{{ "{{" }} end {{ "}}" }}
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         path: charts/{{ "{{" }} default "ai" .group {{ "}}" }}/{{ "{{" }} .name {{ "}}" }}
