--- a/cluster/templates/productivity.yaml
+++ b/cluster/templates/productivity.yaml
@@ -37,7 +37,7 @@ spec:
           prune: true
           selfHeal: true
         syncOptions:
-          - CreateNamespace=true
+          - CreateNamespace={{ "{{" }} if hasKey . "createNamespace" {{ "}}" }}{{ "{{" }} .createNamespace {{ "}}" }}{{ "{{" }} else {{ "}}" }}true{{ "{{" }} end {{ "}}" }}
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         path: charts/{{ "{{" }} default "productivity" .group {{ "}}" }}/{{ "{{" }} .name {{ "}}" }}
