--- a/cluster/templates/storage.yaml
+++ b/cluster/templates/storage.yaml
@@ -31,7 +31,7 @@ spec:
           prune: true
           selfHeal: true
         syncOptions:
-          - CreateNamespace=true
+          - CreateNamespace={{ "{{" }} if hasKey . "createNamespace" {{ "}}" }}{{ "{{" }} .createNamespace {{ "}}" }}{{ "{{" }} else {{ "}}" }}true{{ "{{" }} end {{ "}}" }}
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         path: charts/storage/democratic-csi
