feat: Add cert-manager Helm chart and related resources for certificate management
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -10,6 +10,8 @@ spec:
   generators:
     - list:
         elements:
+        - name: certificates
+          group: infrastructure
         - name: custom-error-pages
           group: infrastructure
         - name: external-secrets-operator
