fix: Update region reference in ClusterIssuer templates to use certificates.aws.region
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/infrastructure/certificates/templates/clusterissuers-letsencrypt-production.yaml
+++ b/charts/infrastructure/certificates/templates/clusterissuers-letsencrypt-production.yaml
@@ -17,7 +17,7 @@ spec:
           - {{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
       dns01:
         route53:
-          region: {{ .Values.aws.region }}
+          region: {{ .Values.certificates.aws.region }}
           accessKeyIDSecretRef:
             name: {{ .Release.Name }}-secret
             key: accessKeyID
