--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -12,6 +12,7 @@ spec:
         elements:
         - name: certificates
           group: infrastructure
+          createNamespace: false
         - name: custom-error-pages
           group: infrastructure
         - name: external-secrets-operator
