--- a/charts/infrastructure/certificates/templates/clusterissuers-letsencrypt-production.yaml
+++ b/charts/infrastructure/certificates/templates/clusterissuers-letsencrypt-production.yaml
@@ -4,7 +4,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-production
-  namespace: cert-manager
+  namespace: cert-manager-operator
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
