--- a/charts/infrastructure/certificates/templates/externalsecret.yaml
+++ b/charts/infrastructure/certificates/templates/externalsecret.yaml
@@ -4,6 +4,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: {{ .Release.Name }}-secret
+  namespace: cert-manager
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
