--- a/charts/infrastructure/certificates/templates/clusterissuers-letsencrypt-staging.yaml
+++ b/charts/infrastructure/certificates/templates/clusterissuers-letsencrypt-staging.yaml
@@ -4,7 +4,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-staging
-  namespace: cert-manager-operator
+  namespace: certificates
 spec:
   acme:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
