feat: Add cert-manager operator resources and update annotations for sync-wave
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/infrastructure/certificates/templates/certificate-api.yaml
+++ b/charts/infrastructure/certificates/templates/certificate-api.yaml
@@ -4,6 +4,8 @@ kind: Certificate
 metadata:
   name: api-cert-tls
   namespace: openshift-config
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
 spec:
   secretName: api-cert-tls
   issuerRef:
