--- a/charts/infrastructure/certificates/templates/clusterissuers-letsencrypt-production.yaml
+++ b/charts/infrastructure/certificates/templates/clusterissuers-letsencrypt-production.yaml
@@ -4,7 +4,8 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-production
-  namespace: certificates
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
