feat: Add Keepalived operator with necessary configurations and templates
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -23,6 +23,8 @@ spec:
         - name: intel-gpu-operator
           group: infrastructure
           createNamespace: false
+        - name: keepalived-operator
+          group: infrastructure
         - name: openshift-nfd
           group: infrastructure
   template:
