feat: Add K10 Kasten Operator with necessary templates and configurations
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -23,6 +23,9 @@ spec:
         - name: intel-gpu-operator
           group: infrastructure
           createNamespace: false
+        - name: k10-kasten-operator
+          group: infrastructure
+          createNamespace: false
         - name: keepalived-operator
           group: infrastructure
         - name: openshift-nfd
