feat: Implement Kasten K10 namespace exclusion management with tasks and scripts
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -8,6 +8,7 @@ shopt: [globstar]
 includes:
   git: .taskfiles/git
   helm: .taskfiles/helm
+  kasten: .taskfiles/kasten
   validate: .taskfiles/validate
 
 tasks:
