--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -14,6 +14,7 @@ spec:
           group: infrastructure
         - name: custom-error-pages
           group: infrastructure
+          createNamespace: false
         - name: external-secrets-operator
           group: security
         - name: goldilocks
