fix: Remove commented-out example for excludedApps in values.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/infrastructure/k10-kasten-operator/values.yaml
+++ b/charts/infrastructure/k10-kasten-operator/values.yaml
@@ -14,5 +14,4 @@ cluster:
 kasten:
   # Custom applications to exclude from Kasten K10 backups
   # OpenShift system namespaces are automatically excluded via openshift-excluded-apps.yaml
-  #excludedApps:
-  # - myapp
+  excludedApps: []
