--- a/charts/infrastructure/k10-kasten-operator/values.yaml
+++ b/charts/infrastructure/k10-kasten-operator/values.yaml
@@ -23,4 +23,5 @@ application:
 kasten:
   # Custom applications to exclude from Kasten K10 backups
   # OpenShift system namespaces are automatically excluded via openshift-excluded-apps.yaml
-  excludedApps: []
+  excludedApps:
+  - object-lease-operator-system
