feat: Add annotation for Kasten K10 snapshot class in values.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/storage/democratic-csi/values.yaml
+++ b/charts/storage/democratic-csi/values.yaml
@@ -54,6 +54,9 @@ democratic-csi:
 
   volumeSnapshotClasses:
     - name: synology-iscsi
+      annotations:
+        k10.kasten.io/is-snapshot-class: "true"
+      deletionPolicy: Delete
       parameters:
       secrets:
         snapshotter-secret:
