feat: Add Generic Device Plugin Helm chart and related resources
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -17,6 +17,8 @@ spec:
           createNamespace: false
         - name: external-secrets-operator
           group: security
+        - name: generic-device-plugin
+          group: infrastructure
         - name: goldilocks
           group: infrastructure
         - name: gatus
