--- a/charts/infrastructure/generic-device-plugin/templates/daemonset.yaml
+++ b/charts/infrastructure/generic-device-plugin/templates/daemonset.yaml
@@ -87,8 +87,8 @@ spec:
         - name: dev
           hostPath:
             path: /dev
-            type: Directory
+            type: ''
         - name: device-plugins
           hostPath:
             path: /var/lib/kubelet/device-plugins
-            type: DirectoryOrCreate
+            type: ''
