fix: Correct application group name from 'Automation' to 'Home Automation' in values.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/home-automation/node-red/values.yaml
+++ b/charts/home-automation/node-red/values.yaml
@@ -13,7 +13,7 @@ cluster:
 
 application:
   name: Node-RED
-  group: Automation
+  group: Home Automation
   icon: simple-icons:nodered
   image: https://raw.githubusercontent.com/node-red/node-red.github.io/master/images/node-red.png
   description: "A flow-based development tool."
