fix: Update volume mount path for config in statefulset.yaml from '/config' to '/data'
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/home-automation/node-red/templates/statefulset.yaml
+++ b/charts/home-automation/node-red/templates/statefulset.yaml
@@ -44,7 +44,7 @@ spec:
           image: {{ .Values.pods.main.image.repository }}:{{ .Values.pods.main.image.tag }}
           imagePullPolicy: IfNotPresent
           volumeMounts:
-          - mountPath: /config
+          - mountPath: /data
             name: config
           - mountPath: /data/settings.js
             name: settings
