feat: Add Z-Wave JS to MQTT Helm chart with necessary templates and configurations
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/home-automation.yaml
+++ b/cluster/templates/home-automation.yaml
@@ -11,6 +11,7 @@ spec:
     - list:
         elements:
         - name: node-red
+        - name: zwavejs2mqtt
   template:
     metadata:
       name: '{{ "{{" }} .name {{ "}}" }}'
