fix: Rename service port from 'http' to 'ws' in ws-service.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/home-automation/zwavejs2mqtt/templates/ws-service.yaml
+++ b/charts/home-automation/zwavejs2mqtt/templates/ws-service.yaml
@@ -9,7 +9,7 @@ spec:
     - port: 3000
       targetPort: 3000
       protocol: TCP
-      name: http
+      name: ws
   selector:
     app.kubernetes.io/controller: main
     app.kubernetes.io/instance: {{ .Release.Name }}
