fix: Specify hostPath type for volumes in daemonset.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/infrastructure/generic-device-plugin/templates/daemonset.yaml
+++ b/charts/infrastructure/generic-device-plugin/templates/daemonset.yaml
@@ -87,8 +87,8 @@ spec:
         - name: dev
           hostPath:
             path: /dev
-            type: ''
+            type: hostPath
         - name: device-plugins
           hostPath:
             path: /var/lib/kubelet/device-plugins
-            type: ''
+            type: hostPath
