feat: Add Home Assistant Helm chart with necessary templates and configurations
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/home-automation.yaml
+++ b/cluster/templates/home-automation.yaml
@@ -10,6 +10,7 @@ spec:
   generators:
     - list:
         elements:
+        - name: home-assistant
         - name: node-red
         - name: zwavejs2mqtt
   template:
